--- a/styles.css
+++ b/styles.css
@@ -223,3 +223,122 @@ header nav .order-button:hover {
     transform: translateY(-10px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
 }
+
+/* Ceník Sekce */
+.pricing {
+    background-color: #333;
+    color: #fff;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.pricing h2 {
+    font-size: 3rem;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-decoration: underline;
+    text-decoration-thickness: 4px;
+}
+
+.pricing .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+/* Kategorie ceníku */
+.pricing-category {
+    margin-bottom: 50px;
+}
+
+.pricing-category h3 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    color: #ebebeb;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+/* Tabulka ceníku */
+.price-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+.price-table th, .price-table td {
+    padding: 15px;
+    text-align: left;
+}
+
+.price-table th {
+    background-color: #444;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.price-table td {
+    background-color: #555;
+    color: #cccccc;
+}
+
+.price-table tr:nth-child(even) td {
+    background-color: #555;
+}
+
+.price-table tr:hover {
+    background-color: #666;
+    transition: background-color 0.3s;
+}
+
+.price-table td:first-child {
+    font-weight: bold;
+}
+
+/* FAQ Sekce */
+.faq {
+    background-color: #333;
+    color: #fff;
+    padding: 50px 0;
+}
+
+.faq .container {
+    max-width: 1200px; /* Maximální šířka kontejneru */
+    margin: 0 auto;    /* Středování kontejneru */
+    padding: 0 20px;   /* Padding pro vnitřní okraje */
+}
+
+.faq h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    color: #fff;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.faq-item {
+    background-color: #444;
+    border-radius: 8px;
+    margin: 20px 0;
+    padding: 20px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.faq-item h3 {
+    font-size: 1.8rem;
+    margin-bottom: 15px;
+    color: #ffffff;
+}
+
+.faq-item p {
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #d4d4d4;
+}
+
+.faq-item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+}
