--- a/styles.css
+++ b/styles.css
@@ -615,3 +615,66 @@ header nav .order-button:hover {
         display: none;
     }
 }
+
+.reservation-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 65%;
+    margin: 0 auto;
+    padding: 2rem 0;
+    color: var(--white-color);
+}
+
+.reservation-form h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+form label {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+}
+
+form input, form textarea, form button, form select {
+    font-size: 1rem;
+    padding: 0.8rem;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: var(--gray-color);
+    color: var(--white-color);
+    
+}
+
+form input, form textarea {
+    background-color: var(--gray-color);
+    color: var(--white-color);
+}
+
+form button {
+    background-color: var(--blue-color);
+    color: var(--white-color);
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+form button:hover {
+    background-color: var(--white-color);
+    color: var(--blue-color);
+}
+
+#responseMessage {
+    margin-top: 1rem;
+    font-size: 1rem;
+    color: var(--light-gray-color);
+}
